Add transfer API mock
