# toz-be/api/swagger/swagger.yaml
@@ -32,12 +32,38 @@ paths:
           required: false
           type: string
       responses:
-        "200":
+        200:
           description: Success
           schema:
             # a pointer to a definition
             $ref: "#/definitions/HelloWorldResponse"
         # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /transfers:
+    x-swagger-router-controller: transfers
+    post:
+      description: Transfer money
+      operationId: transfer
+      parameters:
+        - name: transfer
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/TransferRequest'        
+      responses:
+        200:
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/TransferResponse"
+        # responses may fall through to errors
+        400:
+          description: Bad Request    
+          schema:
+            $ref: "#/definitions/ErrorResponse"          
         default:
           description: Error
           schema:
@@ -58,3 +84,26 @@ definitions:
     properties:
       message:
         type: string
+  TransferRequest:
+    type: object
+    required:
+      - receiver
+      - amount
+      - currency
+    properties:
+      receiver:
+        type: string
+      amount:
+        type: number
+        format: double
+      currency:
+        type: string
+        enum: ["PLN", "EUR", "USD"]
+      description:
+        type: string
+  TransferResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string        
